Moved basic function to basic functions library-2

--- a/lib/argparser/CMakeLists.txt
+++ b/lib/argparser/CMakeLists.txt
@@ -1,12 +1,12 @@
-add_library(argparser ArgParser.cpp
+add_library(argparser STATIC ArgParser.cpp
         ArgParser.h
         ArgumentBuilder.h
         Argument.h
         ConcreteArgumentBuilder.hpp
         ConcreteArgument.cpp
         ConcreteArgument.hpp
-        BasicFunctions.cpp
-        BasicFunctions.hpp
 )
 
-message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
+target_link_libraries(argparser PUBLIC basic)
+
+target_include_directories(argparser PUBLIC ${PROJECT_SOURCE_DIR})
