--- a/lib/argparser/CMakeLists.txt
+++ b/lib/argparser/CMakeLists.txt
@@ -7,6 +7,8 @@ add_library(argparser STATIC ArgParser.cpp
         ConcreteArgument.hpp
 )
 
+add_subdirectory(basic)
+
 target_link_libraries(argparser PUBLIC basic)
 
 target_include_directories(argparser PUBLIC ${PROJECT_SOURCE_DIR})
