--- a/lib/argparser/CMakeLists.txt
+++ b/lib/argparser/CMakeLists.txt
@@ -9,6 +9,6 @@ add_library(argparser STATIC ArgParser.cpp
 
 add_subdirectory(basic)
 
-target_link_libraries(argparser PUBLIC basic)
+target_link_libraries(argparser PUBLIC argparser_basic)
 
 target_include_directories(argparser PUBLIC ${PROJECT_SOURCE_DIR})
