--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,10 @@
 cmake_minimum_required(VERSION 3.12)
 
 project(
-    labwork4
-    VERSION 1.0
-    DESCRIPTION "C++ Year 2023 labword4"
-    LANGUAGES CXX
+        labwork4
+        VERSION 1.0
+        DESCRIPTION "C++ Year 2023 labwork4"
+        LANGUAGES CXX
 )
 
 set(CMAKE_CXX_STANDARD 20)
