Added another TU compatability

--- a/lib/argparser/basic/CMakeLists.txt
+++ b/lib/argparser/basic/CMakeLists.txt
@@ -1,3 +1,4 @@
-add_library(argparser_basic STATIC BasicFunctions.cpp
+add_library(argparser_basic BasicFunctions.cpp
         BasicFunctions.hpp
+        ErrorOutput.hpp
 )
