--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,12 +3,23 @@ cmake_minimum_required(VERSION 3.12)
 project(
         labwork4
         VERSION 1.0
-        DESCRIPTION "C++ Year 2023 labwork4"
+        DESCRIPTION "C++ argument parser"
         LANGUAGES CXX
 )
 
 set(CMAKE_CXX_STANDARD 20)
 
+if(NOT CMAKE_BUILD_TYPE)
+    set(CMAKE_BUILD_TYPE Release)
+endif()
+
+if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+    set(CMAKE_CXX_FLAGS_DEBUG "/MDd")
+    set(CMAKE_CXX_FLAGS_RELEASE "/O2")
+else ()
+    set(CMAKE_CXX_FLAGS_DEBUG "-g")
+    set(CMAKE_CXX_FLAGS_RELEASE "-O3")
+endif()
 
 add_subdirectory(lib)
 add_subdirectory(bin)
