--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.12)
 
 project(
-        labwork4
-        VERSION 1.0
+        ArgParser
+        VERSION 1.1
         DESCRIPTION "C++ argument parser"
         LANGUAGES CXX
 )
