--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -16,11 +16,11 @@ jobs:
             build_type: "Release", cc: "cl", cxx: "cl",
             environment_script: "C:/Program Files (x86)/Microsoft Visual Studio/2019/Enterprise/VC/Auxiliary/Build/vcvars64.bat"
           }
-#          - {
-#            name: "Windows Latest MinGW", artifact: "Windows-MinGW.tar.xz",
-#            os: windows-latest,
-#            build_type: "Release", cc: "gcc", cxx: "g++"
-#          } # Somehow it is not working even here, exit code 127 on the main executable
+          - {
+            name: "Windows Latest MinGW", artifact: "Windows-MinGW.tar.xz",
+            os: windows-latest,
+            build_type: "Release", cc: "gcc", cxx: "g++"
+          } # Somehow it is not working even here, exit code 127 on the main executable
           - {
             name: "Ubuntu Latest GCC", artifact: "Linux.tar.xz",
             os: ubuntu-latest,
@@ -49,7 +49,7 @@ jobs:
       - name: Build main target
         shell: bash
         run: |
-          cmake --build cmake-build-release --target labwork4 || echo "Built with errors"
+          cmake --build cmake-build-release --target ArgParser || echo "Built with errors"
 
       - name: Build tests target
         shell: bash
@@ -62,13 +62,13 @@ jobs:
         run: |
           if [ "$RUNNER_OS" == "Windows" ]; then
               if [ "${{ matrix.config.cxx }}" == "g++" ]; then
-                  ./labwork4.exe --help
+                  ./ArgParser.exe --help
               else
                   cd Debug
-                  ./labwork4.exe --help
+                  ./ArgParser.exe --help
               fi
           else 
-              ./labwork4 --help
+              ./ArgParser --help
           fi
 
       - name: Run tests
