Added CMake include directories command for non-main argparser usage

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,4 +28,6 @@ if (CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
 
     enable_testing()
     add_subdirectory(tests)
+else ()
+    set(ARGPARSER_NOT_MAIN)
 endif ()
