Some fixes in non-main then include mechanic

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,12 +22,13 @@ else ()
 endif ()
 
 add_subdirectory(lib)
+set(ARGPARSER_IS_MAIN "false")
 
 if (CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
     add_subdirectory(bin)
 
     enable_testing()
     add_subdirectory(tests)
-else ()
-    set(ARGPARSER_NOT_MAIN)
+
+    set(ARGPARSER_IS_MAIN "true")
 endif ()
