Made better main or not main selectors

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,14 +21,13 @@ else ()
     set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 endif ()
 
-add_subdirectory(lib)
-set(ARGPARSER_IS_MAIN "false")
-
 if (CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
+    add_subdirectory(lib)
     add_subdirectory(bin)
 
     enable_testing()
     add_subdirectory(tests)
-
-    set(ARGPARSER_IS_MAIN "true")
+else()
+    set(ARGPARSER_NOT_MAIN)
+    add_subdirectory(lib)
 endif ()
