--- a/lib/argparser/CMakeLists.txt
+++ b/lib/argparser/CMakeLists.txt
@@ -12,7 +12,6 @@ target_link_libraries(argparser PRIVATE argparser_basic)
 
 target_include_directories(argparser PUBLIC ${PROJECT_SOURCE_DIR})
 
-if (ARGPARSER_NOT_MAIN)
-    message(STATUS "Library ArgParser is not main, including ${argparser_SOURCE_DIR}/lib")
-    target_include_directories(argparser PUBLIC "${argparser_SOURCE_DIR}/lib")
-endif ()
+# This is needed for FetchContent usage, if built as standalone has no effect
+target_include_directories(argparser PUBLIC "${argparser_SOURCE_DIR}/lib")
+target_include_directories(argparser PUBLIC "${ArgParser_SOURCE_DIR}/lib")
