Fixed bash error

--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -62,7 +62,7 @@ jobs:
         run: |
           if [ "$RUNNER_OS" == "Windows" ]; then
               if [ "${{ matrix.config.cxx }}" == "g++" ]; then
-                  # ./ArgParser.exe --help
+                  ./ArgParser.exe --help
               else
                   cd Debug
                   ./ArgParser.exe --help
