Add concept for argument types

--- a/lib/argparser/CMakeLists.txt
+++ b/lib/argparser/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(argparser STATIC ArgParser.cpp
         ConcreteArgumentBuilder.hpp
         ConcreteArgument.cpp
         ConcreteArgument.hpp
+        ArgParserConcepts.hpp
 )
 
 add_subdirectory(basic)
