--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,12 +2,14 @@ cmake_minimum_required(VERSION 3.12)
 
 project(
         ArgParser
-        VERSION 1.2.0
-        DESCRIPTION "C++ argument parser"
+        VERSION 1.2.5
+        DESCRIPTION "C++ CLI argument parser library"
         LANGUAGES CXX
 )
 
 set(CMAKE_CXX_STANDARD 20)
+
+message(STATUS "Building ${PROJECT_DESCRIPTION} ${PROJECT_NAME}, version ${PROJECT_VERSION}")
 
 if (NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE Release)
